--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
+*{
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+    background-image: url('https://lh3.googleusercontent.com/proxy/zhqAu008wHcWgQHjpfMBsA67Z6hOfcHGw1j6UBbR9ohBoTYhvKmBvJo2luTo2LI0-XcUKT9WqA1DFDufvuGi-u6n2x6aXR1td8hfmbgVRmQ');
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
