--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
 }
+
+@media (max-width: 500px){
+    body {
+        background-size: 100vh;
+    }
+}
