--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,11 +2,11 @@
     box-sizing: border-box;
 }
 .navbar {
-    height: 10vh;
+    height: 15vh;
     width: 100%;
     background: transparent;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 20px;
 }
@@ -26,6 +26,7 @@
     font-size: 15px;
     outline: none;
     color: rgb(255, 255, 255);
+    margin-right: 30px;
 }
 
 .navbar-button:hover {
@@ -58,14 +59,15 @@
 
 .dropdown {
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     background-color: rgb(33, 37, 41);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: flex-start;
     position: fixed;
-    top: 8vh;
-    left: 0;
+    top: 10vh;
+    left: 0%;
     box-sizing: border-box;
 }
 
@@ -81,9 +83,10 @@
 
     .navbar-button-container {
         display: none;
-        background-color: rgb(33, 37, 41);
     }
     .navbar {
         background-color: rgb(33, 37, 41);
+        justify-content: space-between;
+        height: 75px;
     }
 }
